# PythonOtusProject

./: .dockerignore  .env  .env.example  .env.template  .gitignore  alembic.ini  docker-compose.yaml  example.env  main.py  mig.sh  pyproject.toml  run.sh
app/: .env  .env.admin  .env.api  __init__.py  config.py  dependency.py  main.py
app/api/: __init__.py  auth.py  dependencies.py  get_session.py  login.py
app/api/auth/: dependencies.py  dependency.py  login.py
app/api/crud/: __init__.py  hash_pw.py  user.py
app/api/dependencies/: __init__.py  dependency.py
app/api/profiles/: crud.py  schemas.py  views.py
app/api/users/: crud.py  dependencies.py  schemas.py  views.py
app/api/views/: user.py
app/core/: __init__.py  admin.py  config.py  hashing.py  security.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2025_03_25_1849-0cd35570aa66_create_tables.py  2025_04_01_1857-b7ec68d5ec25_create_tables.py
app/internal/: __init__.py  admin.py
app/migrations/: env.py
app/migrations/versions/: 2025_04_18_1722-18c521c39ce9_create_tables.py
app/models/: __init__.py  address.py  base.py  db.py  order.py  order_items.py  product.py  profile.py  user.py
app/routers/: __init__.py  login.py  root.py  user.py
app/schemas/: __init__.py  user.py
app/services/: __init__.py  user.py
